Refactored DatabaseService and MovieCatalogueController. Added two new methods to MovieCatalogueService with corresponding unit tests