@@ -7,12 +7,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.BiConsumer;
 
 /**
- *
+ * This Service class handles the logic of the catalogue application, ensuring
+ * ratings stored in the database are valid and processing null ratings which
+ * cannot be stored in the SQL database, and also rounding all ratings to one
+ * decimal place (always rounding down).
  */
 @Component
 public class MovieCatalogueService {
@@ -25,14 +29,14 @@ public class MovieCatalogueService {
     //Floats cannot be stored as null in SQL, so stored as -1.0 if rating is
     //not present after eliminating ratings outside the acceptable range.
     private BiConsumer<String,Movie> handleNullRatings = (str,mov) -> {
-        if (new Float(-1.0).equals(mov.getRating().get())) {
+        if (Float.valueOf((float) -1.0).equals(mov.getRating().get())) {
             mov.setRating(Optional.empty());
         }
     };
 
     /**
      *
-     * @return
+     * @return Returns the full current catalogue of movies
      */
     public Catalogue getCurrentCatalogue(){
         Catalogue catalogue = new Catalogue();
@@ -45,25 +49,24 @@ public class MovieCatalogueService {
     /**
      *
      * @param movieIO
-     * @throws IllegalArgumentException
      */
-    public void addMovie(MovieIO movieIO) throws IllegalArgumentException {
+    public void addMovie(MovieIO movieIO)  {
         Float rating = movieIO.getRating();
         if (rating != null) {
             checkRatingIsWithinRange(rating);
             movieIO.setRating(roundRating(rating, RATING_DECIMAL_PLACES));
         } else {
-            movieIO.setRating(new Float(-1.0));
+            movieIO.setRating(Float.valueOf((float) -1.0));
         }
         databaseService.addMovie(movieIO);
     }
 
     /**
      *
+     * @param title
      * @param movieIO
-     * @throws IllegalArgumentException
      */
-    public void editMovie(String title, MovieIO movieIO) throws IllegalArgumentException {
+    public void editMovie(String title, MovieIO movieIO)  {
         Movie movie = databaseService.getMovieByTitle(title);
         if (movie == null) {
             throw new IllegalArgumentException("No movie found to edit for the title given");
@@ -104,7 +107,7 @@ public class MovieCatalogueService {
      * @param rating
      * @return
      */
-    public Catalogue getMoviesAboveRating(Float rating) throws IllegalArgumentException {
+    public Catalogue getMoviesAboveRating(Float rating)  {
         checkRatingIsWithinRange(rating);
         Float roundedRating = roundRating(rating, RATING_DECIMAL_PLACES);
         Catalogue returnCatalogue = new Catalogue();
@@ -114,17 +117,52 @@ public class MovieCatalogueService {
     }
 
     /**
+     * Calls the database service to get the movie with the given title from the database
+     * and sets it in the Catalogue if there is a movie with the title. Otherwise, sets an
+     * empty HashMap in the Catalogue and returns it.
+     * @param title
+     * @return A Catalogue containing the movie with the given title
+     */
+    public Catalogue getMovieByTitle(String title) {
+        Movie movie = databaseService.getMovieByTitle(title);
+        Catalogue catalogue = new Catalogue();
+        catalogue.setMovies(new HashMap<>());
+        if (movie != null) {
+            catalogue.getMovies().put(title, movie);
+            catalogue.getMovies().forEach(handleNullRatings);
+        }
+        return catalogue;
+    }
+
+    /**
+     * This method throws an IllegalArgumentException for ratings outside the range of 0.0 - 5.0,
+     * rounds the given rating to one decimal place and then calls the database service with the
+     * given director and rating
+     * @param director
+     * @param rating
+     * @return A Catalogue containing all movies by the given director above the given rating
+     */
+    public Catalogue getMoviesByDirectorAboveRating(String director, Float rating)  {
+        checkRatingIsWithinRange(rating);
+        Float roundedRating = roundRating(rating, RATING_DECIMAL_PLACES);
+        Catalogue returnCatalogue = new Catalogue();
+
+        returnCatalogue.setMovies(databaseService.getMoviesByDirectorAboveRating(director, roundedRating));
+        return returnCatalogue;
+    }
+
+    /**
      * Check rating is within the allowed range (0.0 to 5.0)
      * @param rating
      */
-    private void checkRatingIsWithinRange(Float rating) throws IllegalArgumentException {
+    private void checkRatingIsWithinRange(Float rating)  {
         if (rating < 0.0 || rating > 5.0) {
             throw new IllegalArgumentException("The rating given was outside of the acceptable range. Please use ratings within 0.0 - 5.0");
         }
     }
 
     /**
-     * Round to certain number of decimals
+     * Round to given number of decimals
      * @param d
      * @param decimalPlace
      * @return
