@@ -34,9 +34,9 @@ public class MovieCatalogueServiceTest {
     @Before
     public void setup() {
         movieMap = new HashMap<>();
-        movieMap.put("Hot Fuzz", new Movie(Optional.of("Edgar Wright"), Optional.of(new Float(5.0))));
-        movieMap.put("Shaun of the Dead", new Movie(Optional.of("Edgar Wright"), Optional.of(new Float(-1.0))));
-        movieMap.put("Tropic Thunder", new Movie(Optional.of("Ben Stiller"), Optional.of(new Float(5.0))));
+        movieMap.put("Hot Fuzz", new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 5.0))));
+        movieMap.put("Shaun of the Dead", new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) -1.0))));
+        movieMap.put("Tropic Thunder", new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))));
     }
 
     @Test
@@ -54,19 +54,19 @@ public class MovieCatalogueServiceTest {
         assertTrue(catalogue.getMovies().containsKey("Shaun of the Dead"));
         assertTrue(catalogue.getMovies().containsKey("Tropic Thunder"));
 
-        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(new Float(5.0))), catalogue.getMovies().get("Hot Fuzz"));
+        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Hot Fuzz"));
         assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.empty()), catalogue.getMovies().get("Shaun of the Dead"));
-        assertEquals(new Movie(Optional.of("Ben Stiller"), Optional.of(new Float(5.0))), catalogue.getMovies().get("Tropic Thunder"));
+        assertEquals(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Tropic Thunder"));
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void test_add_movie_throws_illegal_argument_exception_if_rating_is_higher_than_acceptable_range() {
-        service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", new Float(50.0)));
+        service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", Float.valueOf((float) 50.0)));
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void test_add_movie_throws_illegal_argument_exception_if_rating_is_lower_than_acceptable_range() {
-        service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", new Float(-1.0)));
+        service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", Float.valueOf((float) -1.0)));
     }
 
     @Test
@@ -74,21 +74,21 @@ public class MovieCatalogueServiceTest {
         ArgumentCaptor<MovieIO> captor = ArgumentCaptor.forClass(MovieIO.class);
         service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", null));
         Mockito.verify(database).addMovie(captor.capture());
-        assertEquals(new Float(-1.0), captor.getValue().getRating());
+        assertEquals(Float.valueOf((float) -1.0), captor.getValue().getRating());
     }
 
     @Test
     public void test_add_movie_sets_ratings_to_one_decimal_place_and_always_rounds_down(){
         ArgumentCaptor<MovieIO> captor = ArgumentCaptor.forClass(MovieIO.class);
-        service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", new Float(4.99999)));
+        service.addMovie(new MovieIO("Tropic Thunder", "Ben Stiller", Float.valueOf((float) 4.99999)));
         Mockito.verify(database).addMovie(captor.capture());
-        assertEquals(new Float(4.9), captor.getValue().getRating());
+        assertEquals(Float.valueOf((float) 4.9), captor.getValue().getRating());
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void test_edit_movie_throws_illegal_argument_exception_if_rating_is_higher_than_acceptable_range() {
-        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(new Float(5.0))));
-        service.editMovie("TrpicThonder", new MovieIO("Tropic Thunder", "Ben Stiller", new Float(50.0)));
+        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))));
+        service.editMovie("TrpicThonder", new MovieIO("Tropic Thunder", "Ben Stiller", Float.valueOf((float) 50.0)));
         Mockito.verify(database, Mockito.never()).updateRating(any(), any());
         Mockito.verify(database, Mockito.never()).updateDirector(any(), any());
         Mockito.verify(database, Mockito.never()).updateTitle(any(), any());
@@ -96,8 +96,8 @@ public class MovieCatalogueServiceTest {
 
     @Test(expected = IllegalArgumentException.class)
     public void test_edit_movie_throws_illegal_argument_exception_if_rating_is_lower_than_acceptable_range() {
-        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(new Float(5.0))));
-        service.editMovie("TrpicThonder", new MovieIO("Tropic Thunder", "Ben Stiller", new Float(-1.0)));
+        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))));
+        service.editMovie("TrpicThonder", new MovieIO("Tropic Thunder", "Ben Stiller", Float.valueOf((float) -1.0)));
         Mockito.verify(database, Mockito.never()).updateRating(any(), any());
         Mockito.verify(database, Mockito.never()).updateDirector(any(), any());
         Mockito.verify(database, Mockito.never()).updateTitle(any(), any());
@@ -106,13 +106,13 @@ public class MovieCatalogueServiceTest {
     @Test(expected = IllegalArgumentException.class)
     public void test_edit_movie_throws_illegal_argument_exception_if_movie_does_not_exist_in_database(){
         Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(null);
-        service.editMovie("TrpicThonder", new MovieIO("TrpicThonder", "Ben Stiller", new Float(5.0)));
+        service.editMovie("TrpicThonder", new MovieIO("TrpicThonder", "Ben Stiller", Float.valueOf((float) 5.0)));
     }
 
     @Test
     public void test_database_not_called_when_edit_movie_data_is_the_same_as_already_present_data(){
-        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(new Float(5.0))));
-        service.editMovie("TrpicThonder", new MovieIO("TrpicThonder", "Ben Stiller", new Float(5.0)));
+        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))));
+        service.editMovie("TrpicThonder", new MovieIO("TrpicThonder", "Ben Stiller", Float.valueOf((float) 5.0)));
         Mockito.verify(database, Mockito.never()).updateRating(any(), any());
         Mockito.verify(database, Mockito.never()).updateDirector(any(), any());
         Mockito.verify(database, Mockito.never()).updateTitle(any(), any());
@@ -120,8 +120,8 @@ public class MovieCatalogueServiceTest {
 
     @Test
     public void test_database_called_if_previous_values_are_empty(){
-        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.empty(), Optional.of(new Float(-1.0))));
-        service.editMovie("TrpicThonder", new MovieIO("TrpicThonder", "Ben Stiller", new Float(5.0)));
+        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.empty(), Optional.of(Float.valueOf((float) -1.0))));
+        service.editMovie("TrpicThonder", new MovieIO("TrpicThonder", "Ben Stiller", Float.valueOf((float) 5.0)));
         Mockito.verify(database, Mockito.times(1)).updateRating(any(), any());
         Mockito.verify(database, Mockito.times(1)).updateDirector(any(), any());
         Mockito.verify(database, Mockito.never()).updateTitle(any(), any());
@@ -129,8 +129,8 @@ public class MovieCatalogueServiceTest {
 
     @Test
     public void test_database_called_if_previous_values_are_present_but_different(){
-        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("James Cameron"), Optional.of(new Float(4.9))));
-        service.editMovie("TrpicThonder", new MovieIO("Tropic Thunder", "Ben Stiller", new Float(5.0)));
+        Mockito.when(database.getMovieByTitle("TrpicThonder")).thenReturn(new Movie(Optional.of("James Cameron"), Optional.of(Float.valueOf((float) 4.9))));
+        service.editMovie("TrpicThonder", new MovieIO("Tropic Thunder", "Ben Stiller", Float.valueOf((float) 5.0)));
         Mockito.verify(database, Mockito.times(1)).updateRating(any(), any());
         Mockito.verify(database, Mockito.times(1)).updateDirector(any(), any());
         Mockito.verify(database, Mockito.times(1)).updateTitle(any(), any());
@@ -151,26 +151,64 @@ public class MovieCatalogueServiceTest {
         assertTrue(catalogue.getMovies().containsKey("Hot Fuzz"));
         assertTrue(catalogue.getMovies().containsKey("Shaun of the Dead"));
 
-        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(new Float(5.0))), catalogue.getMovies().get("Hot Fuzz"));
+        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Hot Fuzz"));
         assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.empty()), catalogue.getMovies().get("Shaun of the Dead"));
     }
 
     @Test
     public void test_get_movies_above_rating_handles_empty_map_from_database() {
-        Mockito.when(database.getMoviesAboveRating(new Float(4.0))).thenReturn(new HashMap<>());
-        Catalogue catalogue = service.getMoviesAboveRating(new Float(4.0));
+        Mockito.when(database.getMoviesAboveRating(Float.valueOf((float) 4.0))).thenReturn(new HashMap<>());
+        Catalogue catalogue = service.getMoviesAboveRating(Float.valueOf((float) 4.0));
         assertEquals(new HashMap<>(), catalogue.getMovies());
     }
 
     @Test
     public void test_get_movies_above_rating_returns_catalogue() {
         movieMap.remove("Shaun of the Dead");
-        Mockito.when(database.getMoviesAboveRating(new Float(4.0))).thenReturn(movieMap);
-        Catalogue catalogue = service.getMoviesAboveRating(new Float(4.0));
+        Mockito.when(database.getMoviesAboveRating(Float.valueOf((float) 4.0))).thenReturn(movieMap);
+        Catalogue catalogue = service.getMoviesAboveRating(Float.valueOf((float) 4.0));
         assertTrue(catalogue.getMovies().containsKey("Hot Fuzz"));
         assertTrue(catalogue.getMovies().containsKey("Tropic Thunder"));
 
-        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(new Float(5.0))), catalogue.getMovies().get("Hot Fuzz"));
-        assertEquals(new Movie(Optional.of("Ben Stiller"), Optional.of(new Float(5.0))), catalogue.getMovies().get("Tropic Thunder"));
+        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Hot Fuzz"));
+        assertEquals(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Tropic Thunder"));
+    }
+
+    @Test
+    public void test_get_movies_by_director_above_rating_handles_empty_map_from_database() {
+        Mockito.when(database.getMoviesByDirectorAboveRating("Edgar Wright", Float.valueOf((float) 4.0))).thenReturn(new HashMap<>());
+        Catalogue catalogue = service.getMoviesByDirectorAboveRating("Edgar Wright", Float.valueOf((float) 4.0));
+        assertEquals(new HashMap<>(), catalogue.getMovies());
+    }
+
+    @Test
+    public void test_get_movies_by_director_above_rating_returns_catalogue() {
+        movieMap.remove("Shaun of the Dead");
+        movieMap.remove("Tropic Thunder");
+        movieMap.put("The World's End", new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 4.0))));
+        Mockito.when(database.getMoviesByDirectorAboveRating("Edgar Wright", Float.valueOf((float) 4.0))).thenReturn(movieMap);
+        Catalogue catalogue = service.getMoviesByDirectorAboveRating("Edgar Wright", Float.valueOf((float) 4.0));
+        assertTrue(catalogue.getMovies().containsKey("Hot Fuzz"));
+        assertTrue(catalogue.getMovies().containsKey("The World's End"));
+
+        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Hot Fuzz"));
+        assertEquals(new Movie(Optional.of("Edgar Wright"), Optional.of(Float.valueOf((float) 4.0))), catalogue.getMovies().get("The World's End"));
+    }
+
+    @Test
+    public void test_get_movies_by_title_handles_empty_map_from_database() {
+        Mockito.when(database.getMovieByTitle("Tropic Thunder")).thenReturn(null);
+        Catalogue catalogue = service.getMovieByTitle("Tropic Thunder");
+        assertEquals(new HashMap<>(), catalogue.getMovies());
+    }
+
+    @Test
+    public void test_get_movies_by_title_returns_catalogue() {
+        Mockito.when(database.getMovieByTitle("Tropic Thunder")).thenReturn(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))));
+        Catalogue catalogue = service.getMovieByTitle("Tropic Thunder");
+        assertTrue(catalogue.getMovies().containsKey("Tropic Thunder"));
+        assertEquals(1, catalogue.getMovies().size());
+
+        assertEquals(new Movie(Optional.of("Ben Stiller"), Optional.of(Float.valueOf((float) 5.0))), catalogue.getMovies().get("Tropic Thunder"));
     }
 }
